--- a/src/components/cta-block-alt/cta-block-alt.css
+++ b/src/components/cta-block-alt/cta-block-alt.css
@@ -5,6 +5,7 @@
 .cta-block-alt-intro {
   text-align: center;
   padding: 60px 0 60px;
+  border-top: 1px solid var(--color-30);
 
   h4 {
     color: var(--color-17);
@@ -14,6 +15,10 @@
     padding: 0;
     max-width: 100%;
     
+    @media (--small-breakpoint-down) {
+      font-size: 24px;
+      line-height: 32px;
+    }
   }
 }
 
